command-line/10-compiling_in_c.txt
Last login: Thu Apr 24 08:13:37 on ttys000

The default interactive shell is now zsh.
To update your account to use zsh, please run `chsh -s /bin/zsh`.
For more details, please visit https://support.apple.com/kb/HT208050.
Mac619948:~ smith518$ cd ~/Documents
Mac619948:Documents smith518$ vi calculate_pythagorean_triples.c
Mac619948:Documents smith518$ cc calculate_pythagorean_triples.c -lm
Mac619948:Documents smith518$ ls
a.out				calculate_pythagorean_triples.c
Mac619948:Documents smith518$ ./a.out
   3   4   5
   5  12  13
   6   8  10
   7  24  25
   8  15  17
   9  12  15
   9  40  41
  10  24  26
  12  16  20
  12  35  37
  14  48  50
  15  20  25
  15  36  39
  16  30  34
  18  24  30
  20  21  29
  21  28  35
  24  32  40
  27  36  45
  30  40  50
Mac619948:Documents smith518$ ./a.out | wc -l
      20
Mac619948:Documents smith518$ cc calculate_pythagorean_triples.c -lm -o triples.x
Mac619948:Documents smith518$ ./triples.x
   3   4   5
   5  12  13
   6   8  10
   7  24  25
   8  15  17
   9  12  15
   9  40  41
  10  24  26
  12  16  20
  12  35  37
  14  48  50
  15  20  25
  15  36  39
  16  30  34
  18  24  30
  20  21  29
  21  28  35
  24  32  40
  27  36  45
  30  40  50
Mac619948:Documents smith518$ vi calculate_pythagorean_triples.c
Mac619948:Documents smith518$ cc calulat_pythagorean_triples.c -lm -o triples.x
clang: error: no such file or directory: 'calulat_pythagorean_triples.c'
Mac619948:Documents smith518$ cc calculate_pythagorean_triples.c -lm -o triples.x
calculate_pythagorean_triples.c:10:9: error: redefinition of 'maximum_c'
   10 |     int maximum_c = 50;
      |         ^
calculate_pythagorean_triples.c:7:15: note: previous definition is here
    7 |     int a, b, maximum_c;
      |               ^
1 error generated.
Mac619948:Documents smith518$ vi calculate_pythagorean_triples.c
Mac619948:Documents smith518$ cc calculate_pythagorean_triples.c -lm -o triples.x
Mac619948:Documents smith518$ ./triples.x 5
   3   4   5
Mac619948:Documents smith518$